AT-1 (Em Andamento)

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="box-about">
             <div class="section-subtitle">
                 <h2>
-                    <p><svg height="30px" width="30px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 447.641 447.641" xml:space="preserve" fill="#ffff" transform="rotate(0)matrix(-1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g> <g> <path style="fill:#ffff;" d="M253.254,420.02L58.883,225.617h127.578c2.569-19.24,6.3-74.921-28.166-117.694 C127.838,70.109,75.132,50.942,1.666,50.942L0,33.547c1.252-0.228,31.214-5.926,72.962-5.926 c88.106,0,236.631,25.955,252.083,197.996h122.595L253.254,420.02z"></path> </g> </g> </g> </g> </g></svg></p>
+                    <!-- <p><svg height="30px" width="30px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 447.641 447.641" xml:space="preserve" fill="#ffff" transform="rotate(0)matrix(-1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g> <g> <path style="fill:#ffff;" d="M253.254,420.02L58.883,225.617h127.578c2.569-19.24,6.3-74.921-28.166-117.694 C127.838,70.109,75.132,50.942,1.666,50.942L0,33.547c1.252-0.228,31.214-5.926,72.962-5.926 c88.106,0,236.631,25.955,252.083,197.996h122.595L253.254,420.02z"></path> </g> </g> </g> </g> </g></svg></p> -->
 
                     <p><span>Desenvolvedor</span> Front-end</p>
                 </h2>
@@ -217,7 +217,7 @@
     </section>
     <!-- END FOOTER -->
 
-    <script src="scripts.js"></script>
+    <sc;ript src="scripts.js"></script>
 
 </body>
 
